More demo tweaks: - Fixed subtle field-shadowing bug in Momentum. - Changed mobile apps to no longer try to use synthetic scrolling (too many problems on some devices). - Removed body margin styles from common.css (was getting injected on mobile and causing layout problems).
Review by: rjrjr@google.com

git-svn-id: http://google-web-toolkit.googlecode.com/svn/branches/2.1@8179 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/bikeshed/src/com/google/gwt/sample/bikeshed/style/client/common.css
+++ b/bikeshed/src/com/google/gwt/sample/bikeshed/style/client/common.css
@@ -1,10 +1,4 @@
 /* global */
-body {
-  color: black;
-  margin: 8px;
-  margin-top: 3px;
-}
-
 body, table, td {
   font-family: Arial, sans-serif;
   font-weight: light;
